# grc-ai-toolkit

./: .gitignore  ARCHITECTURE.md  CONSOLIDATION.md  README.md  tool1_grc_content_creator_spec.md
.claude/: settings.local.json
grc_ai_toolkit/: .env.example  .gitignore  CLAUDE.md  GRC_AI_Toolkit_Validation_Report.md  INSTALL.md  INSTALL_UV.md  README.md  __init__.py  check_python.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
grc_ai_toolkit/agents/: __init__.py  base.py  orchestrator.py  templates.py
grc_ai_toolkit/data/: __init__.py  exporters.py  processor.py  vector_store.py
grc_ai_toolkit/llm/: __init__.py  config.py  manager.py  prompts.py  utils.py
grc_ai_toolkit/sample_data/: __init__.py  generators.py
grc_ai_toolkit/tests/: __init__.py  streamlit_demo_app.py  test_agents_integration.py  test_agents_orchestrator.py  test_data_exporters.py  test_llm.py  test_llm_utils.py  test_rag_integration.py  test_sample_data.py  test_ui_components.py  test_ui_layouts.py
grc_ai_toolkit/ui/: __init__.py  components.py  forms.py  layouts.py
