[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-ai-toolkit"
version = "1.0.0"
description = "AI-powered toolkit for GRC (Governance, Risk, and Compliance) applications"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Anusha Cabral", email = "your.email@example.com"}
]
maintainers = [
    {name = "Anusha Cabral", email = "your.email@example.com"}
]
keywords = ["grc", "governance", "risk", "compliance", "ai", "langchain", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # LangChain ecosystem
    "langchain>=0.1.0,<0.4",
    "langchain-core>=0.1.0,<0.4",
    "langchain-community>=0.0.20,<0.4",
    "langchain-openai>=0.0.5,<0.4",
    "langchain-anthropic>=0.1.0,<0.4",
    "langchain-groq>=0.1.0,<0.4",

    # LLM providers
    "openai>=1.12.0,<2.0",
    "anthropic>=0.18.0,<1.0",
    "groq>=0.11.0,<1.0",
    "tiktoken>=0.6.0,<1.0",

    # Vector stores
    "faiss-cpu>=1.7.4,<2.0",
    "chromadb>=0.4.22,<0.6",

    # Embeddings
    "sentence-transformers>=2.3.1,<3.0",

    # Document processing
    "pypdf2>=3.0.1,<4.0",
    "python-docx>=1.1.0,<2.0",
    "pdfplumber>=0.10.3,<1.0",
    "unstructured>=0.12.0,<1.0",

    # Export formats
    "reportlab>=4.0.9,<5.0",
    "markdown>=3.5.2,<4.0",

    # Web & API
    "streamlit>=1.31.0,<2.0",
    "fastapi>=0.109.2,<1.0",
    "uvicorn>=0.27.1,<1.0",
    "pydantic>=2.6.1,<3.0",

    # Data processing (NumPy 2.0+ has better Python 3.14 support)
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0",  # Flexible: will use 2.0+ on Python 3.14

    # Utilities
    "python-dotenv>=1.0.1,<2.0",
    "pyyaml>=6.0.1,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<5.0",
    "pytest-asyncio>=0.23.4,<1.0",
    "black>=24.1.1,<25.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.8.0,<2.0",
]

local-llm = [
    "transformers>=4.37.2,<5.0",
    "torch>=2.2.0,<3.0",
]

all = [
    "grc-ai-toolkit[dev,local-llm]",
]

[project.urls]
Homepage = "https://github.com/your-username/grc-ai-toolkit"
Documentation = "https://github.com/your-username/grc-ai-toolkit/blob/main/README.md"
Repository = "https://github.com/your-username/grc-ai-toolkit"
Issues = "https://github.com/your-username/grc-ai-toolkit/issues"

[project.scripts]
grc-toolkit = "grc_ai_toolkit.cli:main"

[tool.setuptools]
packages = {find = {}}  # Auto-discover all packages with __init__.py

[tool.setuptools.package-data]
grc_ai_toolkit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=grc_ai_toolkit",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: Integration tests that require API keys",
    "slow: Slow tests",
    "unit: Fast unit tests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["grc_ai_toolkit"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
